<resources>
    <string name="app_name">Pmis</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="nav_profile">Profile</string>
    <string name="nav_try_list">Try List</string>
    <string name="nav_seeting">Setting</string>
    <string name="nav_rate_us">Rate Us</string>
    <string name="nav_about">About</string>
    <string name="nav_version">Version</string>
    <string name="nav_faq">FAQ</string>
    <string name="nav_logout">Logout</string>
</resources>