<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="@dimen/_100sdp"
        android:gravity="center"
        >


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/nav_user_pic"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="8dp"
            android:src="@drawable/profile_demo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nav_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text=""
            app:layout_constraintStart_toEndOf="@+id/nav_user_pic"
            app:layout_constraintTop_toTopOf="@+id/nav_user_pic" />

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                >

                <TextView
                    android:id="@+id/navProfileTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:drawablePadding="20dp"
                    android:drawableTint="@color/grey_800"
                    android:foreground="?selectableItemBackground"
                    android:gravity="start|center"
                    android:paddingLeft="20dp"
                    android:paddingTop="15dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="15dp"
                    android:text="@string/nav_profile"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:drawableLeftCompat="@drawable/ic_baseline_person_outline_24"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/navStrockColor"
                android:visibility="invisible" />



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                >

                <TextView
                    android:id="@+id/navTryList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:drawablePadding="20dp"
                    android:drawableTint="@color/grey_800"
                    android:foreground="?selectableItemBackground"
                    android:gravity="start|center"
                    android:paddingLeft="20dp"
                    android:paddingTop="15dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="15dp"
                    android:text="@string/nav_try_list"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:drawableLeftCompat="@drawable/ic_outline_favorite_border_24"


                    />
                <!--
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="16dp"
                                    android:src="@drawable/ic_outline_arrow_forward_ios_24"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />-->
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/navStrockColor"
                android:visibility="invisible" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                >

                <TextView
                    android:id="@+id/navSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:drawablePadding="20dp"
                    android:drawableTint="@color/grey_800"
                    android:foreground="?selectableItemBackground"
                    android:gravity="start|center"
                    android:paddingLeft="20dp"
                    android:paddingTop="15dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="15dp"
                    android:text="@string/nav_seeting"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:drawableLeftCompat="@drawable/ic_outline_settings_24"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/navStrockColor"
                android:visibility="invisible" />





            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                >

                <TextView
                    android:id="@+id/navRateTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:drawablePadding="20dp"
                    android:drawableTint="@color/grey_800"
                    android:foreground="?selectableItemBackground"
                    android:gravity="start|center"
                    android:paddingLeft="20dp"
                    android:paddingTop="15dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="15dp"
                    android:text="@string/nav_rate_us"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:drawableLeftCompat="@drawable/ic_outline_star_rate_24"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/navStrockColor"
                android:visibility="invisible" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                >

                <TextView
                    android:id="@+id/navAboutTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:drawablePadding="20dp"
                    android:drawableTint="@color/grey_800"
                    android:foreground="?selectableItemBackground"
                    android:gravity="start|center"
                    android:paddingLeft="20dp"
                    android:paddingTop="15dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="15dp"
                    android:text="@string/nav_about"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:drawableLeftCompat="@drawable/ic_info_outline_white_24dp"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/navStrockColor"
                android:visibility="invisible" />



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                >

                <TextView
                    android:id="@+id/navLogoutTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:drawablePadding="20dp"
                    android:drawableTint="@color/grey_800"
                    android:foreground="?selectableItemBackground"
                    android:gravity="start|center"
                    android:paddingLeft="20dp"
                    android:paddingTop="15dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="15dp"
                    android:text="@string/nav_logout"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:drawableLeftCompat="@drawable/ic_baseline_logout_24"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/navStrockColor"
                android:visibility="invisible" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                >

                <TextView
                    android:id="@+id/navVersion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:drawablePadding="20dp"
                    android:drawableTint="@color/grey_800"
                    android:foreground="?selectableItemBackground"
                    android:gravity="start|center"
                    android:paddingLeft="20dp"
                    android:paddingTop="15dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="15dp"
                    android:text="@string/nav_version"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:drawableLeftCompat="@drawable/ic_outline_app_shortcut_24"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/navStrockColor"
                android:visibility="invisible" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>